fix z-index

--- a/src/components/SocialBar/SocialBar.scss
+++ b/src/components/SocialBar/SocialBar.scss
@@ -2,14 +2,14 @@
   display: flex;
   flex-flow: column;
   align-items: center;
-  z-index: 5000;
+  z-index: 0;
   position: fixed;
   bottom: 5px;
   right: 5px;
 
   .social {
       writing-mode: tb-rl;
-      margin-bottom: 10px;
+      margin: 0 0 10px 0;
   }
 
   a {
